<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/forest4"
    android:dividerPadding="3dp"
    android:gravity="center"
    android:keepScreenOn="true"
    android:padding="20dp"
    android:stretchColumns="*"
    android:weightSum="5" >
    
     <TableRow style="?android:attr/buttonBarStyle"
          android:layout_height="0dp"
          android:layout_width="wrap_content"
          android:layout_weight="1"
          android:layout_marginTop="5dp"
          android:layout_marginBottom="5dp"
          android:background="#00FFFFFF"
          android:gravity="center_horizontal">
          
          <TextView
              android:id="@+id/textView1"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              
              android:fontFamily="primer print bold"
              android:gravity="center_horizontal"
              android:lines="15"
              android:text="@string/restaurant"
              android:textColor="#FFFFFF"
              android:textSize="40sp"
              android:visibility="visible" />
          
</TableRow>
    
   
     <TableRow style="?android:attr/buttonBarStyle"
          android:layout_height="0dp"
          android:layout_width="wrap_content"
          android:layout_weight="1"
          android:layout_marginTop="5dp"
          android:layout_marginBottom="5dp"
          android:background="#00FFFFFF"
          android:gravity="center_horizontal">
          
          <TextView
              android:id="@+id/login"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:background="@drawable/sign1"
              android:fontFamily="primer print bold"
              android:gravity="center_horizontal"
              android:lines="15"
              android:text="@string/loginheading"
              android:textColor="#FFFFFF"
              android:textSize="25sp"
              android:visibility="visible" />
          
</TableRow>

                
      <TableRow style="?android:attr/buttonBarStyle"
          android:layout_height="0dp"
          android:layout_width="match_parent"
          android:weightSum="2"
          android:layout_weight="1"
          android:layout_marginTop="15dp"
          android:layout_marginBottom="15dp"
          android:background="#00FFFFFF"
          android:gravity="center_horizontal">
          
          
 		  <TextView
              android:id="@+id/usernamelabel"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:background="@drawable/woodbutton"
              android:fontFamily="primer print bold"
              android:gravity="center_horizontal"
              android:lines="15"
              android:text="@string/usernamelabel"
              android:textColor="#FFFFFF"
              android:textSize="20sp"
              android:paddingLeft="5dp"
              android:paddingRight="5dp"
              android:layout_marginLeft="5dp"
              android:layout_marginRight="5dp"
              android:visibility="visible" />
                  
		  <EditText
              android:id="@+id/username"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:background="@drawable/woodbutton"
              android:fontFamily="primer print bold"
              android:gravity="center_horizontal"
              android:lines="15"
              android:hint="@string/usernamedesc"
              android:textColor="#FFFFFF"
              android:textSize="20sp"
              android:paddingLeft="5dp"
              android:paddingRight="5dp"
              android:layout_marginLeft="5dp"
              android:layout_marginRight="5dp"
              android:visibility="visible" />
          
          		  
      </TableRow>
      
      <TableRow style="?android:attr/buttonBarStyle"
          android:layout_height="0dp"
          android:layout_width="match_parent"
          android:weightSum="2"
          android:layout_weight="1"
          android:layout_marginTop="15dp"
          android:layout_marginBottom="15dp"
          android:background="#00FFFFFF"
          android:gravity="center_horizontal">
          
          
 		  <TextView
              android:id="@+id/passwordlabel"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_weight="1"
              android:background="@drawable/woodbutton"
              android:fontFamily="primer print bold"
              android:gravity="center_horizontal"
              android:lines="15"
              android:text="@string/passwordlabel"
              android:textColor="#FFFFFF"
              android:textSize="20sp"
              android:paddingLeft="5dp"
              android:paddingRight="5dp"
              android:layout_marginLeft="5dp"
              android:layout_marginRight="5dp"
              android:visibility="visible" />

 		  <EditText
 		      android:id="@+id/password"
 		      android:layout_width="wrap_content"
 		      android:layout_height="wrap_content"
 		      android:layout_marginLeft="5dp"
 		      android:layout_marginRight="5dp"
 		      android:layout_weight="1"
 		      android:background="@drawable/woodbutton"
 		      android:ems="10"
 		      android:fontFamily="primer print bold"
 		      android:gravity="center_horizontal"
 		      android:hint="@string/passworddesc"
 		      android:inputType="textPassword"
 		      android:lines="15"
 		      android:paddingLeft="5dp"
 		      android:paddingRight="5dp"
 		      android:textColor="#FFFFFF"
 		      android:textSize="20sp"
 		      android:visibility="visible" >

 		      <requestFocus />
 		  </EditText>
          		  
      </TableRow>
      
     <TableRow style="?android:attr/buttonBarStyle"
          android:layout_height="0dp"
          android:layout_width="fill_parent"
          android:weightSum="3"
          android:layout_marginTop="15dp"
          android:layout_weight="1"
          android:layout_marginBottom="15dp"
          android:background="#00FFFFFF"
          android:gravity="center_horizontal">
               
          <Button style="?android:attr/buttonBarButtonStyle"
		        android:id="@+id/loginbutton"
		        android:contentDescription="@string/loginbuttondesc"
		        android:layout_width="0dp"
		        android:layout_weight="1"
		        android:layout_height="wrap_content"
		        android:text="@string/loginbutton"
		        android:textColor="#FFFFFF"
		        android:onClick="login"
		        android:fontFamily="primer print bold"
		        android:background="@drawable/woodbutton"
		        android:textAllCaps="false"
		        android:layout_margin="3dp"/>
		  
           </TableRow>
      
  </TableLayout>
 

